# Braggi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GD--DTTIUOCE--CURSOR--INTERNAL.md  README.md  braggi-integrated-spec.md  build_and_test.sh  crypticroot.bg  crypticroot.bg.pub  quantum_howdy.bg  run_build.sh  test_lsp.bg  test_stdlib.sh
.cursor/rules/: geneneral-directives.mdc
cmake/: FindJansson.cmake  FindReadline.cmake
docs/: GD-DTTIUOCE-CURSOR-INTERNAL.md  braggi-api-reference.md  braggi-ecs-overview.md  getting-started-with-braggi-ecs.md  testing.md
include/braggi/: allocation.h  braggi.h  braggi_context.h  builtins.h  codegen.h  codegen_arch.h  constraint.h  constraint_pattern.h  constraint_patterns.h  ecs.h  ecs_components.h  ecs_systems.h  entropy.h  entropy_ecs.h  error.h  error_handler.h  grammar_patterns.h  lsp_interface.h  pattern.h  periscope.h  region.h  region_manager.h  region_types.h  runtime.h  source.h  source_position.h  state.h  stdlib.h  symbol_table.h  token.h  token_ecs.h  token_manager.h  token_propagator.h  tokenizer.h  types.h
include/braggi/builtins/: builtins.h
include/braggi/ecs/: codegen_components.h  codegen_systems.h
include/braggi/mem/: regime.h  region.h
include/braggi/util/: hashmap.h  memory.h  region.h  vector.h
lib/: collections.bg  core.bg  error.bg  io.bg  math.bg  quantum.bg  region.bg  string.bg
scripts/: assemble_and_run.sh  run_all_tests.sh  run_and_execute_all_tests.sh  run_build.sh  run_single_test.sh  run_tests.sh
src/: allocation.c  braggi.c  braggi.h  braggi_context.c  braggi_context.h  constraint.c  constraint_pattern.c  constraint_patterns.c  ecs.c  entropy.c  entropy_ecs.c  error.c  error_handler.c  functional_validator.c  grammar_patterns.c  lsp_interface.c  main.c  periscope.c  region.c  region_manager.c  repl.c  source.c  source_position.c  state.c  symbol_table.c  test_source.c  token.c  token_ecs.c  token_manager.c  token_propagator.c  token_propagator.c.bak  tokenizer.c
src/builtins/: builtins.c
src/codegen/: arm.c  arm64.c  codegen.c  codegen_manager.c  x86_64.c
src/ecs/: codegen_components.c  codegen_systems.c
src/mem/: regime.c  region.c
src/runtime/: runtime.c
src/stdlib/: stdlib.c
src/util/: hashmap.c  memory.c  region.c  vector.c  vector.h
tests/: README.md  constraints.bg  hello.bg  hello_world.bg  periscopes.bg  quantum_features.bg  region_patterns.bg  stdlib_test.bg  test_source.c  type_safe_regions.bg
tools/: CMakeLists.txt  repl.c  simple_repl.c  test_harness.c
